fixed youtube slide canvas

--- a/Client/Viewer/ViewerView.html
+++ b/Client/Viewer/ViewerView.html
@@ -83,6 +83,7 @@
         justify-content: center;
         align-items: center; /* Center canvas if smaller than container */
         pointer-events: none; /* Allow clicks to pass through to YT player by default */
+        background-color: transparent; /* Make sure container is transparent */
       }
       #viewerFabricCanvas { 
           /* width/height set by JS based on slide */
