fixed youtube issue

--- a/Client/Admin/Admin_JS.html
+++ b/Client/Admin/Admin_JS.html
@@ -23,7 +23,7 @@
       activePopoverId: null, // To track the currently open popover
       history: [],
       historyIndex: -1,
-      isApplyingHistory: false, // Flag to prevent re-saving state during undo/redo
+      isApplyingHistory: false, // Flag to prevent re-saving state during undo and redo
       adminYouTubePlayer: null, // Reference to the admin's YouTube player instance
       isYouTubeApiReady: false // Flag for YouTube API readiness
     };
