--- a/Client/Viewer/Viewer_JS.html
+++ b/Client/Viewer/Viewer_JS.html
@@ -430,17 +430,35 @@
 
         switch(mediaType) {
             case 'image':
-                if (media.url && media.url.startsWith('data:image')) {
-                    fabric.Image.fromURL(media.url, function(img) {
-                        if (!viewerApp.state.viewerFabricCanvas || viewerApp.state.currentSlideIndex !== slideIndex) return;
-                        canvas.setBackgroundImage(img, canvas.renderAll.bind(canvas), {
-                            scaleX: canvas.width / img.width, scaleY: canvas.height / img.height
-                        });
-                    }, { crossOrigin: 'anonymous' });
+                if (media.driveFileId) {
+                    // Always fetch from Drive, don't rely on stored base64
+                    showLoadingViewer(true);
+                    google.script.run
+                        .withSuccessHandler(function(response) {
+                            showLoadingViewer(false);
+                            if (viewerApp.state.currentSlideIndex !== slideIndex) return;
+                            if (response && response.success && response.base64Data) {
+                                fabric.Image.fromURL(response.base64Data, function(img) {
+                                    if (!viewerApp.state.viewerFabricCanvas || viewerApp.state.currentSlideIndex !== slideIndex) return;
+                                    canvas.setBackgroundImage(img, canvas.renderAll.bind(canvas), {
+                                        scaleX: canvas.width / img.width, 
+                                        scaleY: canvas.height / img.height
+                                    });
+                                }, { crossOrigin: 'anonymous' });
+                            } else {
+                                console.error("Failed to fetch image for viewer:", response);
+                                canvas.renderAll();
+                            }
+                        })
+                        .withFailureHandler(function(error) {
+                            showLoadingViewer(false);
+                            onServerErrorViewer(error);
+                            canvas.renderAll();
+                        })
+                        .getImageAsBase64(media.driveFileId);
                 } else {
-                     console.warn("Image media present but URL is missing or not base64:", media.url);
-                     // canvas.backgroundColor = '#e9e9e9'; // Handled by viewerMediaContainerEl
-                     canvas.renderAll();
+                    console.warn("Image media present but no driveFileId:", media);
+                    canvas.renderAll();
                 }
                 if (viewerMediaContainerEl) viewerMediaContainerEl.style.backgroundColor = '#333';
                 if (fabricCanvasEl) fabricCanvasEl.style.opacity = '1';
