--- a/Client/Viewer/ViewerView.html
+++ b/Client/Viewer/ViewerView.html
@@ -3,8 +3,27 @@
   <head>
     <base target="_top">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fabric.js/5.3.0/fabric.min.js"></script> 
-    <!-- Add YouTube Player API script -->
-    <script src="https://www.youtube.com/iframe_api"></script> 
+    <!-- Add YouTube Player API script with error handling -->
+    <script>
+      // Define the callback before loading the API
+      window.onYouTubeIframeAPIReady = function() {
+        console.log("YouTube IFrame API Ready");
+        if (window.viewerApp && window.viewerApp.onYouTubeApiReady) {
+          window.viewerApp.onYouTubeApiReady();
+        }
+      };
+      
+      // Load YouTube API with error handling
+      (function() {
+        var tag = document.createElement('script');
+        tag.src = "https://www.youtube.com/iframe_api";
+        tag.onerror = function() {
+          console.warn("Failed to load YouTube API. YouTube videos will not play.");
+        };
+        var firstScriptTag = document.getElementsByTagName('script')[0];
+        firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
+      })();
+    </script>
     <title>Interactive Training Modules</title>
     <?!= include('Client/Shared/Modal_CSS'); ?>
     <style>
