updated youtube interaction

--- a/Client/Viewer/Viewer_JS.html
+++ b/Client/Viewer/Viewer_JS.html
@@ -1710,7 +1710,7 @@
     }
 
     // --- UPDATED Spotlight Functions (Step 23 - Cutout Overlay) ---
-    function applySpotlightEffect(targetObject) { // This is the older version, SVG one is preferred
+    function applySpotlightEffect(targetObject) { // This is the older version, SVG one is preferred -- probably remove
         const canvas = viewerApp.state.viewerFabricCanvas;
         if (!canvas) {
             console.log("Spotlight not applied: Canvas not available.");
