updated youtube experience

--- a/Client/Admin/AdminView.html
+++ b/Client/Admin/AdminView.html
@@ -659,6 +659,10 @@
                         <input type="text" id="youtubeUrlInput" placeholder="Paste YouTube URL here">
                         <button id="setYoutubeBackgroundButton">Set BG</button>
                     </div>
+                    <!-- ADDED "Click to Begin" Checkbox -->
+                    <label style="display: block; margin-top: 10px; font-weight: normal;">
+                        <input type="checkbox" id="youtubeShowClickToBegin"> Show "Click to Begin" Button on video start
+                    </label>
                 </div>
             </div>
         </div>
