--- a/Client/Viewer/ViewerView.html
+++ b/Client/Viewer/ViewerView.html
@@ -191,6 +191,17 @@
         <!-- Audio Player (can be hidden visually if desired) -->
         <audio id="viewerAudioPlayer" controls></audio>
 
+        <!-- ADDED Video Timeline Container -->
+        <div id="viewerVideoTimelineContainer" style="display: none; margin: 15px auto; max-width: 960px; padding: 10px; background-color: #f0f0f0; border-radius: 5px;">
+            <div id="viewerTimelineTrack" style="position: relative; height: 10px; background-color: #ccc; border-radius: 5px; cursor: pointer;">
+                <div id="viewerTimelineProgress" style="position: absolute; height: 100%; background-color: #3498db; border-radius: 5px; width: 0%;"></div>
+                <!-- Question markers will be injected here by JS -->
+            </div>
+            <div id="viewerTimelineTimeDisplay" style="text-align: right; font-size: 0.9em; margin-top: 5px; color: #555;">
+                <span id="viewerCurrentTime">0:00</span> / <span id="viewerTotalDuration">0:00</span>
+            </div>
+        </div>
+
 
         <div id="viewerSlideNavigation">
             <button id="viewerPrevSlideButton" disabled>< Previous Slide</button>
