youtube overlay update

--- a/Client/Admin/AdminView.html
+++ b/Client/Admin/AdminView.html
@@ -1269,7 +1269,7 @@
             <button id="addSlideButton">Add New Slide</button>
             <button id="saveProjectButton" class="edit-button">Save Project</button>
             <div id="slideThumbnailsContainer">
-                 <!-- Dynamically populated -->
+                 <!-- Dynamically Populated -->
             </div>
         </div>
     </div> <!-- End of editViewContainer -->
