fixed overly logic to html

--- a/Client/Viewer/ViewerView.html
+++ b/Client/Viewer/ViewerView.html
@@ -493,5 +493,6 @@
 
     <?!= include('Client/Shared/LoadingSpinner'); ?>
     <?!= include('Client/Viewer/Viewer_Overlay_Logic'); ?> 
+    <?!= include('Client/Viewer/Viewer_JS'); ?>
   </body>
 </html>
