--- a/Client/Admin/AdminView.html
+++ b/Client/Admin/AdminView.html
@@ -985,15 +985,15 @@
         <div id="shapesPopover" class="toolbar-popover">
             <h4>Add Shape</h4>
             <div class="shapes-buttons"> 
-                <button id="addRectangleButton" class="shape-button">
+                <button id="addRectangleButton" class="shape-button" data-shape="rectangle">
                     <span class="material-symbols-outlined">rectangle</span>
                     <span>Rectangle</span>
                 </button>
-                <button id="addCircleButton" class="shape-button">
+                <button id="addCircleButton" class="shape-button" data-shape="circle">
                     <span class="material-symbols-outlined">circle</span>
                     <span>Circle</span>
                 </button>
-                <button id="addTextboxButton" class="shape-button">
+                <button id="addTextboxButton" class="shape-button" data-shape="textbox">
                     <span class="material-symbols-outlined">text_fields</span>
                     <span>Text</span>
                 </button>
